--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,88 @@
 @import '@a1rth/css-normalize/index.css';
+
+
+body {
+    height: 100vh;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.wrapper {
+    min-height: 100vh;
+}
+
+.header {
+    display: flex;
+    height: 100px;
+    width: 100%;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+}
+
+.games__container {
+     margin-bottom: 20px;
+}
+
+.games__container h1 {
+    text-align: center;
+}
+
+
+.genre__list {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    height: 500px;
+    gap: 50px
+}
+
+.genre__list--item {
+    margin: 0 20px;
+    width: 200px;
+    height: 400px;
+    padding: 0 40px;
+    border: 2px solid grey;
+    border-radius: 10px;
+}
+
+.show__more {
+    display: inline-block; 
+    padding: 10px 20px;
+    margin: 10px 0;
+    background-color: #000000;
+    white-space: nowrap;
+    color: white;
+    text-decoration: none;
+    border-radius: 10px;
+    font-size: 16px;
+    text-align: center;
+    transition: background-color 0.3s ease; 
+}
+
+.show__more:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+}
+
+.footer {
+    position: relative;
+    margin: 0 auto;
+    height: 100px;
+}
+
+.footer__container {
+    width: 100%;
+    margin-top: 20px;
+    padding-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contacts__list {
+    width: 600px;
+    display: flex;
+    justify-content: space-between;
+}
