--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body {
     height: 100vh;
     margin: 0 auto;
     padding: 0;
+    font-size: 16px;
 }
 
 .wrapper {
@@ -43,6 +44,7 @@ body {
 
 .games__container h1 {
     text-align: center;
+    font-size: 2em;
 }
 
 
@@ -52,19 +54,25 @@ body {
     align-items: center;
     width: 100%;
     height: 500px;
-    gap: 50px
+    gap: 50px;
+    
 }
 
 .genre__list--item {
     margin: 0 20px;
     height: 400px;
     width: 200px;
-    border: 2px solid grey;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+    border: 2px solid black;
     border-radius: 10px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+}
+
+.genre__list--item h2 {
+    font-size: 1.4em;
 }
 
 .game__list {
@@ -80,13 +88,43 @@ body {
 */
 
 .game__list--item {
-    background-color: red; /*временная заглушка*/
+    position: relative;
     border-radius: 10px;
+    border: 2px solid rgb(73, 71, 71);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     width: 166px;
-    height: fit-content;
+    height: 66px;
     text-align: center;
     margin: 10px 0;
+    overflow: hidden;
+    padding: 1px; 
 }
+
+.game__list--item:hover {
+    transform: scale(1.1);
+    transition: all 500ms ease;
+}
+
+.game__list--item img {
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    width: 100%;
+    height: 66px;
+    z-index: 0;
+    margin: -1px;
+    filter: blur(1px);
+    transform: scale(1.02);
+}
+
+.game__list--item h3 {
+    font-size: 1.1em;
+    z-index: 1;
+    position: relative;
+    color: #ffffff;
+}
+
+
 
 .show__more {
     display: inline-block; 
@@ -100,6 +138,7 @@ body {
     font-size: 16px;
     text-align: center;
     transition: background-color 0.3s ease; 
+    box-shadow: 0 4px 8px rgba(128, 126, 126, 0.5);
 }
 
 .show__more:hover {
