--- a/src/index.css
+++ b/src/index.css
@@ -89,8 +89,7 @@ body {
 
 .game__list--item {
     position: relative;
-    border-radius: 10px;
-    border: 2px solid rgb(73, 71, 71);
+    border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     width: 166px;
     height: 66px;
@@ -111,7 +110,6 @@ body {
     width: 100%;
     height: 66px;
     z-index: 1;
-    margin: -1px;
     filter: brightness(50%); 
     transition: all 0.3s ease !important;
 }
@@ -131,6 +129,7 @@ body {
 
 .game__list--item:hover img {
     filter: brightness(100%);
+    transform: scale(1.1);
 }
 
 .game__list--item:hover h3 {
