--- a/src/index.css
+++ b/src/index.css
@@ -60,8 +60,8 @@ body {
 
 .genre__list--item {
     margin: 0 20px;
-    height: 400px;
-    width: 200px;
+    height: 430px;
+    width: 230px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
     border: 2px solid black;
     border-radius: 10px;
@@ -107,8 +107,6 @@ body {
 .game__list--item img {
     position: absolute;
     top: 0; 
-    width: 100%;
-    height: 66px;
     z-index: 1;
     filter: brightness(50%); 
     transition: all 0.3s ease !important;
@@ -140,7 +138,7 @@ body {
 .show__more {
     display: inline-block; 
     padding: 10px 20px;
-    margin: 10px 0;
+    margin: 20px 0;
     background-color: #000000;
     white-space: nowrap;
     color: white;
@@ -189,5 +187,28 @@ body {
 .contacts__list {
     width: 600px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 10px;
+}
+
+.contacts__list--item {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid rgb(88, 88, 88);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    transition: all 0.3s ease !important;
+}
+
+.contacts__list--item:hover {
+    transform: scale(1.1);
+    width: 50px;
+    height: 50px;
+}
+
+.contacts__list--item:hover::after {
+    content: '';
 }
