Закончит работу над переворотом карточек. Добавит моковые данные.

--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,7 @@ body {
     padding: 20px 20px; 
 }
 
-.genre__list--item:hover .genre__list--inner {
+.genre__list--inner.flipped {
     transform: rotateY(180deg);
 }
 
