--- a/src/game.css
+++ b/src/game.css
@@ -5,4 +5,26 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    border: 2px solid gray;
+}
+
+.game__title {
+    margin: 20px 0;
+}
+
+.rating__container {
+    position: relative;
+    margin: 20px 0;
+    
+}
+
+.rating {
+    font-size: 1.5em;
+}
+
+.rating__numeric {
+    position: absolute;
+    font-size: 1.8em;
+    top: 0;
+    right: -50px;
 }
