--- a/src/main.css
+++ b/src/main.css
@@ -31,11 +31,21 @@ body {
 }
 
 .header {
-    display: flex;
-    height: 100px;
     width: 100%;
+    display: flex;
     justify-content: flex-end;
-    margin-bottom: 20px;
+    align-items: center;
+}
+
+.logo {
+    display: inline-block;
+    margin: 5px 15px;
+    cursor: pointer;
+    transition: all 0.3s ease !important;
+}
+
+.logo:hover {
+    transform: rotate(10deg);
 }
 
 .games__container {
@@ -124,6 +134,8 @@ body {
 .genre__item--back {
     transform: rotateY(180deg);
 }
+
+/*нужно сделать универсальное оформление карточек чтобы название категории и кнопка всегда были на одном месте*/
 
 .genre__description--text {
     padding: 20px 20px; 
@@ -228,19 +240,17 @@ body {
     background-color: white;
     color: black;
     transform: scale(1.05);
-    
 }
 
 .footer {
-    position: relative;
     margin: 0 auto;
-    height: 100px;
+    height: 120px;
 }
 
 .footer__container {
     width: 100%;
-    margin-top: 20px;
-    padding-top: 50px;
+    margin: 20px 0;
+    padding: 20px 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -302,7 +312,7 @@ body {
   
     .genre__list {
         display: grid; 
-        grid-template-columns: repeat(2, 1fr); 
+        grid-template-columns: repeat(2, 300px); 
         gap: 20px; 
         justify-items: center;
     }
