Исправит отображение карточек при width < 1200.

--- a/src/widgets/genre-list/ui/genre-list-wrapper/genre-list-wrapper.module.scss
+++ b/src/widgets/genre-list/ui/genre-list-wrapper/genre-list-wrapper.module.scss
@@ -13,5 +13,8 @@
         grid-template-columns: repeat(2, 300px); 
         gap: 20px; 
         justify-items: center;
+        height: auto;
+        margin-bottom: 20px;
+
     }
 }
