--- a/src/game.css
+++ b/src/game.css
@@ -55,6 +55,15 @@
     gap: 15px;
 }
 
+.review__avatar {
+    border-radius: 50%;
+    padding: 10px 0;
+}
+
+.reviews__user--name {
+    font-size: 1em;
+}
+
 .review__info--text {
     text-align: justify;
 }
