Перенесет часть стилей review нас SCSS модули

--- a/src/game.css
+++ b/src/game.css
@@ -31,19 +31,10 @@
     right: -50px;
 }
 
-.review__section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
-}
-.review__list {
-    width: 100%;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.game__description {
+    width: 63%; 
+    line-height: 2; 
+    text-align: justify;
 }
 
 .review__list--item {
