--- a/src/main.css
+++ b/src/main.css
@@ -1,22 +1,22 @@
 @import '@a1rth/css-normalize/index.css';
 
 @font-face {
-    font-family: "Roboto";
-    src: url('./fonts/Roboto-Regular.woff2') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Roboto';
+  src: url('./fonts/Roboto-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "Roboto";
-    src: url('./fonts/Roboto-Bold.woff2') format('woff2');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Roboto';
+  src: url('./fonts/Roboto-Bold.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
- /* 
+/* 
     Причина в этом медиа запросе из normalize, позже стоит исправить
     @media (prefers-reduced-motion: reduce) {
         *,
@@ -29,11 +29,10 @@
         }
       } */
 
-
 body {
-    font-family: "Roboto", sans-serif;
-    height: 100vh;
-    margin: 0 auto;
-    padding: 0;
-    font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 0;
+  font-size: 16px;
 }
