--- a/src/widgets/genre-list/ui/genre-list-item/genre-list-item.module.scss
+++ b/src/widgets/genre-list/ui/genre-list-item/genre-list-item.module.scss
@@ -2,9 +2,8 @@
 
 .genre__list--item {
   margin: 0 20px;
-  height: 430px;
-  width: 230px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+  min-height: 430px;
+  min-width: 230px;
   border: 2px solid black;
   border-radius: 10px;
   display: flex;
@@ -12,6 +11,13 @@
   align-items: center;
   flex-direction: column;
   perspective: 1000px;
+  transition: all 0.3s ease;
+
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+    cursor: pointer;
+  }
 
   .genre__item-front {
     @include genre-item;
@@ -30,7 +36,7 @@
     height: 430px;
     width: 230px;
     transform-style: preserve-3d;
-    transition: transform 0.6s !important;
+    transition: transform 0.6s;
   }
 }
 
