--- a/src/widgets/header/ui/header.module.scss
+++ b/src/widgets/header/ui/header.module.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     margin: 5px 15px;
     cursor: pointer;
-    transition: all 0.3s ease !important;
+    transition: all 0.3s ease;
 
     &:hover {
       transform: rotate(10deg);
