--- a/src/shared/ui/button/ui/button.module.scss
+++ b/src/shared/ui/button/ui/button.module.scss
@@ -9,7 +9,7 @@
   border-radius: 10px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(128, 126, 126, 0.5);
-  transition: all 0.3s ease !important;
+  transition: all 0.3s ease;
   cursor: pointer;
   border: 2px solid black;
 
