--- a/src/widgets/footer/ui/footer.module.scss
+++ b/src/widgets/footer/ui/footer.module.scss
@@ -27,8 +27,8 @@
     border: 2px solid rgb(88, 88, 88);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     border-radius: 50%;
-    transition: all 0.3s ease !important;
-    transform-origin: center !important;
+    transition: all 0.3s ease;
+    transform-origin: center;
 
     &:hover {
       transform: scale(1.1);
@@ -48,7 +48,7 @@
       white-space: nowrap;
       opacity: 0;
       visibility: hidden;
-      transition: all 0.4s ease !important;
+      transition: all 0.4s ease;
     }
 
     &:hover a::after {
