--- a/src/widgets/games-list/ui/game-list-item/game-list-item.module.scss
+++ b/src/widgets/games-list/ui/game-list-item/game-list-item.module.scss
@@ -8,7 +8,7 @@
   margin: 10px 0;
   overflow: hidden;
   padding: 1px;
-  transition: all 0.3s ease !important;
+  transition: all 0.3s ease;
 
   &:hover {
     transform: scale(1.1);
@@ -29,7 +29,7 @@
   top: 0;
   z-index: 1;
   filter: brightness(50%);
-  transition: all 0.3s ease !important;
+  transition: all 0.3s ease;
 }
 
 .game__title {
@@ -42,5 +42,5 @@
   transform: translate(-50%, -50%);
   color: #ffffff;
   font-weight: bold;
-  transition: opacity 0.3s ease !important;
+  transition: opacity 0.3s ease;
 }
