--- a/src/widgets/genre-list/ui/genre-list-wrapper/genre-list-wrapper.module.scss
+++ b/src/widgets/genre-list/ui/genre-list-wrapper/genre-list-wrapper.module.scss
@@ -11,9 +11,9 @@
   .genre__list {
     display: grid;
     grid-template-columns: repeat(2, 300px);
-    gap: 20px;
+    gap: 30px;
     justify-items: center;
-    height: auto;
+    min-height: max-content;
     margin-bottom: 20px;
   }
 }
