--- a/src/widgets/review-section/ui/review-list-item/review-list-item.module.scss
+++ b/src/widgets/review-section/ui/review-list-item/review-list-item.module.scss
@@ -1,5 +1,5 @@
 .review__list--item {
-  width: 53%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -9,10 +9,21 @@
   & .avatar {
     border-radius: 50%;
     padding: 10px 0;
+    width: 50px;
+    height: 84px;
   }
   & .name {
     font-size: 1em;
   }
+  & .user {
+    width: 50px;
+    height: 94px;
+  }
+}
+
+.info {
+  width: 300px;
+  height: fit-content;
 }
 
 .text {
