--- a/src/main.css
+++ b/src/main.css
@@ -53,6 +53,7 @@ body.dark {
 }
 
 .games__list--item {
+  position: relative;
   background: #fff;
   padding: 16px;
   border-radius: 8px;
@@ -61,13 +62,14 @@ body.dark {
 }
 
 .title {
-  font-size: 18px;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
 .game__studio {
-  font-size: 14px;
+  font-size: 0.9rem;
   color: #666;
+  text-align: center;
 }
 
 .genre__page {
@@ -78,4 +80,14 @@ body.dark {
 
 .games__grid {
   height: auto;
+}
+
+.game__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 280px;
+  height: 100px;
+  border-radius: 8px;
 }
